<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:textAlignment="center"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textSize="40dp"/>

        <TextView
            android:id="@+id/type_title"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/running"
            android:textAlignment="center"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textSize="34dp"/>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:columnCount="2">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/time"
                android:textSize="28dp"
                android:paddingTop="25dp"/>

            <Spinner
                android:id="@+id/times_spinner"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:entries="@array/times"
                android:textSize="28dp"
                android:paddingTop="25dp"/>

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/difficulty"
                android:textSize="28dp"
                android:paddingTop="25dp"/>

            <Spinner
                android:id="@+id/difficulties_spinner"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:entries="@array/difficulties"
                android:textSize="28dp"
                android:paddingTop="25dp"/>

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/hint_label"
                android:textSize="12dp"/>


        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/generate_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/generate"
                android:background="@color/buttonColor"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="60dp"
                android:textSize="24dp"/>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>