<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/display"
            android:textAlignment="center"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textSize="40dp"/>

        <TextView
            android:id="@+id/type_title"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/running"
            android:textAlignment="center"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textSize="34dp"/>

        <TextView
            android:id="@+id/info_title"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/running"
            android:textAlignment="center"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:textSize="34dp"/>

        <GridLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:columnCount="2">

            <TextView
                android:id="@+id/label_1"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="Run"
                android:textColor="#000000"
                android:textSize="28dp" />

            <TextView
                android:id="@+id/amount_1"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textAlignment="gravity"
                android:text="25 min"
                android:textColor="#000000"
                android:textSize="28dp" />

            <TextView
                android:id="@+id/label_2"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="28dp" />

            <TextView
                android:id="@+id/amount_2"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textAlignment="gravity"
                android:textColor="#000000"
                android:textSize="28dp" />

            <TextView
                android:id="@+id/label_3"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="28dp" />

            <TextView
                android:id="@+id/amount_3"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textAlignment="gravity"
                android:textColor="#000000"
                android:textSize="28dp" />

            <TextView
                android:id="@+id/label_4"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="28dp" />

            <TextView
                android:id="@+id/amount_4"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textAlignment="gravity"
                android:textColor="#000000"
                android:textSize="28dp" />

            <TextView
                android:id="@+id/label_5"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="28dp" />

            <TextView
                android:id="@+id/amount_5"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textAlignment="gravity"
                android:textColor="#000000"
                android:textSize="28dp" />

            <TextView
                android:id="@+id/label_6"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="28dp" />

            <TextView
                android:id="@+id/amount_6"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textAlignment="gravity"
                android:textColor="#000000"
                android:textSize="28dp" />

        </GridLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/easier_button"
                    android:layout_width="140dp"
                    android:layout_height="55dp"
                    android:text="@string/easier"
                    android:background="@color/buttonColor"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="20dp"
                    android:textSize="24dp"/>


                <Button
                    android:id="@+id/harder_button"
                    android:layout_width="140dp"
                    android:layout_height="55dp"
                    android:text="@string/harder"
                    android:background="@color/buttonColor"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="20dp"
                    android:textSize="24dp"/>

            </LinearLayout>

            <Button
                android:id="@+id/restart_button"
                android:layout_width="320dp"
                android:layout_height="55dp"
                android:text="@string/restart"
                android:background="@color/buttonColor"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:textSize="24dp"/>


        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>